# hub

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.ps1  crash_log.txt
.github/workflows/: pages.yml
crates/hub-common/: Cargo.toml
crates/hub-common/src/: config.rs  hotkeys.rs  lib.rs  tools.rs
crates/hub-dashboard/: Cargo.toml  tauri.conf.json  tauri.conf.release.json
crates/hub-dashboard/src/: license_commands.rs  main.rs  process_manager.rs  tauri_commands.rs
crates/hub-licensing/: Cargo.toml
crates/hub-licensing/src/: config.rs  lemonsqueezy.rs  lib.rs  trial.rs
docs/: index.html
scripts/: build-all.ps1
