[workspace]
resolver = "2"
members = [
    "crates/hub-common",
    "crates/hub-dashboard",
    "tools/desk-talk",
    "tools/speak-selected",
    "tools/quick-assistant",
    "tools/flatten-string",
    "tools/typo-fix",
    "tools/ocr-paste",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/sloganking/hub"

[workspace.dependencies]
# Shared dependencies across workspace
anyhow = "1.0"
async-openai = "0.28"
async-std = "1.12"
tokio = { version = "1.29", features = ["macros", "rt-multi-thread", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rdev = "0.5.3"
clipboard = "0.5.0"
keyring = { version = "3.6", features = ["windows-native", "sync-secret-service"] }
directories = "6.0"
dotenvy = "0.15"
rodio = "0.17"
default-device-sink = "0.1"
flume = "0.11"
parking_lot = "0.12"
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

# Tauri dependencies
tauri = { version = "2.0", features = ["tray-icon", "protocol-asset", "image-ico"] }
tauri-build = { version = "2.0", features = [] }
tauri-plugin-opener = "2.0"
tauri-plugin-single-instance = "2.0"

# Hub-common as a path dependency
hub-common = { path = "crates/hub-common" }
